syntax = "proto3";

option csharp_namespace = "System.Text.Json.Protobuf.Tests";

message MessageWithRepeatedList {
  repeated int32 int_32_list = 1;
}